# chatpdf-ai

./: README.md  project_structure  pyproject.toml  render.yaml  requirements.txt
cli/: main.py
config/: .env
src/chat/: gemini_setup.py
src/pdf/: extractor.py  scoring.py
src/utils/: config.py  logging_config.py
web/: web_main.py
web/static/: style.css
web/templates/: chat.html  index.html
